# nmbli

./: .env.local.example  .gitignore  .trigger  .vercelignore  CNAME  CODEx_TODO.md  CODING_AGENT_RULES.md  INVITE-SYSTEM-TEST-REPORT.md  MANUAL-TEST-RESULTS.md  README.md  REGRESSION-DASHBOARD.html  TEST-PLAN.html  TESTING.md  TODO-IMPLEMENTATION-STATUS.md  eslint.config.mjs  index.html  invite-codes.csv  middleware.ts  middleware.ts.backup  next.config.ts  package-lock.json  package.json  playwright.config.ts  test-correct-pooler.ts  test-db-connection.ts  test-db-direct.ts  test-pooler-connection.ts  test-session-pooler.ts  test-transaction-mode.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
.husky/: pre-commit  pre-push
app/: globals.css  layout.tsx  page.tsx
archive/: marketcheck-response-2025-10-29T17-18-08-644Z.json
docs/: ARCHITECTURE.md  BUSINESS_PLAN.md  LOGIN_AUTOMATION.md  ROADMAP.md  mvp.md
e2e/: automation.spec.ts  brief-creation.spec.ts  debug-briefs-error.spec.ts  email-sending-integration.spec.ts  google-oauth-complete.spec.ts  quote-negotiation.spec.ts  smoke-briefs.spec.ts
etl/: Makefile  README.md  pyproject.toml
etl/reports/: dq_2015_2022.csv  dq_2024.csv  dq_latest.csv
etl/sql/: 001_schema.sql
etl/src/etl/: cli.py  config.py  db.py  dq.py  http.py  normalize.py  pipeline.py
etl/src/etl/sources/: carquery.py  doe.py  vpic.py
etl/src/outthedoor_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
etl/tests/: test_normalize.py  test_parsers.py  test_pipeline_smoke.py
lib/: supabase-client.ts  zip.ts
mta-sts/: CNAME
(+193 files in other folders)
